added a list_item controller

--- a/grocery-frontend/index.html
+++ b/grocery-frontend/index.html
@@ -38,9 +38,9 @@
         <input type="submit" value="create item">
     </form>
     <div id="lists"></div>
-    
+    <script src="javascripts/services/api.js"></script>
     <script src="javascripts/models/list.js"></script>
     <script src="javascripts/index.js"></script>
-    
+    <link rel="stylesheet" type="text/css" href="styles/style.css">
 </body>
 </html>
