added a sort function

--- a/grocery-frontend/index.html
+++ b/grocery-frontend/index.html
@@ -37,10 +37,12 @@
        
         <input type="submit" value="create item">
     </form>
+    <br>
+    <button onclick='addSortByButton()'>Sort Alphabetically</button>
     <div id="lists"></div>
     <script src="javascripts/services/api.js"></script>
     <script src="javascripts/models/list.js"></script>
     <script src="javascripts/index.js"></script>
-    <link rel="stylesheet" type="text/css" href="styles/style.css">
+    
 </body>
 </html>
