--- a/grocery-frontend/index.html
+++ b/grocery-frontend/index.html
@@ -38,7 +38,7 @@
         <input type="submit" value="create item">
     </form>
     <br>
-    <button id='sort-btn'>Sort Alphabetically</button>
+    <button id='sort-btn'>Sort List</button>
     <br>
     <div id="lists"></div>
     <!-- <script>
